--- a/css/hero.css
+++ b/css/hero.css
@@ -7,6 +7,11 @@
   padding: var(--spacing-medium);
   gap: var(--spacing-large);
   background: transparent;
+  background-color: blue; /*⚠️️ debug ⚠️️*/
+}
+
+.hero-image {
+  flex: 1;
 }
 
 .hero-text {
